libs/fleet/sdk-bindings/swift/CyclopsSdkSchemaFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_tolerations(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_constructor_warmpoolautoscalingbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_initial_pool_size(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_max_pool_size(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_min_pool_size(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_build(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_name(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_protocol(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_target_port(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_sandboxtemplaterefbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_sandboxtemplaterefbuilder_name(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_build(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_command(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_container_disk_image(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_cpu_cores(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_firmware(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_image_pull_policy(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_image_pull_secret(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_memory(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_nested_virtualization(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_node_selector(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_oidc(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_probes(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_runtime(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_runtime_class_name(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_services(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_tolerations(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_preservedjson_to_json(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxtemplatespecbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxtemplatespecbuilder_vm_template(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_autoscaling(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_replicas(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_sandbox_template_ref(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_ttl_seconds_after_created(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_initial_pool_size(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_max_pool_size(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_min_pool_size(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_constructor_sandboxservicebuilder_new(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_constructor_sandboxtemplaterefbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_constructor_vmtemplatebuilder_new(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_constructor_preservedjson_from_json(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_constructor_osgymsandboxtemplatespecbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_constructor_osgymsandboxwarmpoolspecbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_schema_checksum_constructor_warmpoolautoscalingbuilder_new(void

);
uint32_t ffi_cyclops_sdk_schema_uniffi_contract_version(void

);