libs/fleet/sdk-bindings/python/fleet_sdk/_schema.py

_UniffiLib.uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_tolerations.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_schema_fn_constructor_warmpoolautoscalingbuilder_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_schema_fn_constructor_warmpoolautoscalingbuilder_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_build.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_build.restype = _UniffiRustBuffer
_UniffiLib.uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_initial_pool_size.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint32,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_initial_pool_size.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_max_pool_size.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint32,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_max_pool_size.restype = ctypes.c_uint64
_UniffiLib.uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_min_pool_size.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint32,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_cyclops_sdk_schema_fn_method_warmpoolautoscalingbuilder_min_pool_size.restype = ctypes.c_uint64
_UniffiLib.ffi_cyclops_sdk_schema_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_cyclops_sdk_schema_uniffi_contract_version.restype = ctypes.c_uint32
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_osgymsandboxtemplatespecbuilder_new.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_osgymsandboxtemplatespecbuilder_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxtemplatespecbuilder_build.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxtemplatespecbuilder_build.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxtemplatespecbuilder_vm_template.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxtemplatespecbuilder_vm_template.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_osgymsandboxwarmpoolspecbuilder_new.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_osgymsandboxwarmpoolspecbuilder_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_autoscaling.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_autoscaling.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_build.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_build.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_replicas.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_replicas.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_sandbox_template_ref.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_sandbox_template_ref.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_ttl_seconds_after_created.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_osgymsandboxwarmpoolspecbuilder_ttl_seconds_after_created.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_preservedjson_from_json.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_preservedjson_from_json.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_preservedjson_to_json.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_preservedjson_to_json.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_sandboxservicebuilder_new.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_sandboxservicebuilder_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_build.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_build.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_name.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_protocol.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_protocol.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_target_port.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxservicebuilder_target_port.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_sandboxtemplaterefbuilder_new.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_sandboxtemplaterefbuilder_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxtemplaterefbuilder_build.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxtemplaterefbuilder_build.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxtemplaterefbuilder_name.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_sandboxtemplaterefbuilder_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_vmtemplatebuilder_new.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_vmtemplatebuilder_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_build.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_build.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_command.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_command.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_container_disk_image.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_container_disk_image.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_cpu_cores.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_cpu_cores.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_firmware.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_firmware.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_image_pull_policy.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_image_pull_policy.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_image_pull_secret.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_image_pull_secret.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_memory.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_memory.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_nested_virtualization.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_nested_virtualization.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_node_selector.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_node_selector.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_oidc.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_oidc.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_probes.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_probes.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_runtime.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_runtime.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_runtime_class_name.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_runtime_class_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_services.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_services.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_tolerations.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_vmtemplatebuilder_tolerations.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_warmpoolautoscalingbuilder_new.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_constructor_warmpoolautoscalingbuilder_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_build.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_build.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_initial_pool_size.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_initial_pool_size.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_max_pool_size.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_max_pool_size.restype = ctypes.c_uint16
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_min_pool_size.argtypes = (
)
_UniffiLib.uniffi_cyclops_sdk_schema_checksum_method_warmpoolautoscalingbuilder_min_pool_size.restype = ctypes.c_uint16

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)



# Public interface members begin here.


class _UniffiFfiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()

class _UniffiFfiConverterOptionalString(_UniffiConverterRustBuffer):
    @classmethod
    def check_lower(cls, value):
        if value is not None:
            _UniffiFfiConverterString.check_lower(value)

    @classmethod
    def write(cls, value, buf):
        if value is None:
            buf.write_u8(0)
            return
